--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "firebase": "^9.22.2",
+    "re-base": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
